--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css" />
     <title>Filters</title>
     <style></style>
 </head>
@@ -78,8 +80,6 @@
             </div>
 
             <div id="plot1"></div>
-            <div id="plot2"></div>
-            <div class="back4"></div>
             <div class="controls">
                 <div class="signal_type">
                     <p style="    font-size: 1.2rem;"> Signal type</p>
@@ -102,15 +102,15 @@
                         </form>
                     </div>
                 </div>
-                <button>phase correct</button>
+                <button class="control_btn">phase correct</button>
                 <div class="filter">
                     <form method="POST" enctype="multipart/form-data" id="filter_upload">
                         <input type="file" name="uploaded_filter" id="uploaded_filter" onchange="upload_filter()" />
-                        <button id="custom_btn">upload filter</button>
+                        <button class="control_btn" id="custom_btn">upload filter</button>
                         <!-- <input type="submit" /> -->
                     </form>
 
-                    <button>
+                    <button class="control_btn">
                         <a style="text-decoration: none; color: white;" href="static/assets/data/Zeros_poles.csv"
                             download>
                             Export Filter</a>
@@ -118,6 +118,9 @@
                 </div>
 
             </div>
+            <div id="plot2"></div>
+            <div class="back4"></div>
+
 
         </div>
 
@@ -132,8 +135,136 @@
             <div class="back2"></div>
         </div>
     </div>
+    <div class="allpass_contaner">
+        <div class="allpass_first_col">
+            <!-- <div></div> -->
+            <div id="main">
+                <button class="return">Return home</button>
+                <input type="button" id="btAdd" value="Add Element" class="bt" />
+                <input type="button" id="btRemove" value="Remove Element" class="bt" />
+                <input type="button" id="btRemoveAll" value="Remove All" class="bt" />
+            </div>
+            <div class="back_5"></div>
+        </div>
+        <div class="allpass_second_col">
+            <div id="allpass"></div>
+            <div id="total-phase"></div>
+        </div>
+
+        <div class="splide">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef0" value="-0.75+0.75j" class="slider">
+                                    <img src="../static/assets/images/-0.75+0.75j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef1" value="-0.75j" class="slider">
+                                    <img src="../static/assets/images/-0.75j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef2" value="-0.92-0.65j" class="slider">
+                                    <img src="../static/assets/images/-0.92-0.65j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef3" value="-1+0.05j" class="slider">
+                                    <img src="../static/assets/images/-1+0.05j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef4" value="-1+1j" class="slider">
+                                    <img src="../static/assets/images/-1+1j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef5" value="-1-1j" class="slider">
+                                    <img src="../static/assets/images/-1-1j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef6" value="0.5-0.94j" class="slider">
+                                    <img src="../static/assets/images/0.5-0.94j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef7" value="0.94j" class="slider">
+                                    <img src="../static/assets/images/0.94j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef8" value="1+0.5j" class="slider">
+                                    <img src="../static/assets/images/1+0.5j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef9" value="1-0.05j" class="slider">
+                                    <img src="../static/assets/images/1-0.05j.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="splide__slide">
+                        <div class="splide__slide__container">
+                            <div class="slide__content">
+                                <button id="new-all-pass-coef10" value="1" class="slider">
+                                    <img src="../static/assets/images/1.png" alt="buttonpng" border="0" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- <script src="../static/assets/js/graph.js"></script> -->
     <script src="../static/assets/js/index.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="../static/assets/js/allpass.js"></script>
 
 </body>
 <!-- <script src="../static/assets/js/TEST.js"></script> -->
