--- a/templates/index.html
+++ b/templates/index.html
@@ -135,128 +135,131 @@
             <div class="back2"></div>
         </div>
     </div>
-    <div class="allpass_contaner" id="allpass_contaner">
-        <div class="allpass_first_col">
-            <!-- <div></div> -->
-            <div id="main">
-                <button class="return" id="home">Return home</button>
-                <input type="button" id="btAdd" value="Add Element" class="bt" />
-                <input type="button" id="btRemove" value="Remove Element" class="bt" />
-                <input type="button" id="btRemoveAll" value="Remove All" class="bt" />
+    <div id="allpass_contaner">
+        <div class="allpass_contaner">
+            <div class="allpass_first_col">
+                <!-- <div></div> -->
+                <div id="main">
+                    <button class="return" id="home">Return home</button>
+                    <input type="button" id="btAdd" value="Add Element" class="bt" />
+                    <input type="button" id="btRemove" value="Remove Element" class="bt" />
+                    <input type="button" id="btRemoveAll" value="Remove All" class="bt" />
+                </div>
+                <div class="back_5"></div>
             </div>
-            <div class="back_5"></div>
-        </div>
-        <div class="allpass_second_col">
-            <div id="allpass"></div>
-            <div id="total-phase"></div>
-        </div>
+            <div class="allpass_second_col">
+                <div id="allpass"></div>
+                <div id="total-phase"></div>
+            </div>
 
-        <div class="splide">
-            <div class="splide__track">
-                <ul class="splide__list">
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef0" value="-0.75+0.75j" class="slider">
-                                    <img src="../static/assets/images/-0.75+0.75j.png" alt="buttonpng" border="0" />
-                                </button>
+            <div class="splide">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef0" value="-0.75+0.75j" class="slider">
+                                        <img src="../static/assets/images/-0.75+0.75j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef1" value="-0.75j" class="slider">
-                                    <img src="../static/assets/images/-0.75j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef1" value="-0.75j" class="slider">
+                                        <img src="../static/assets/images/-0.75j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef2" value="-0.92-0.65j" class="slider">
-                                    <img src="../static/assets/images/-0.92-0.65j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef2" value="-0.92-0.65j" class="slider">
+                                        <img src="../static/assets/images/-0.92-0.65j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef3" value="-1+0.05j" class="slider">
-                                    <img src="../static/assets/images/-1+0.05j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef3" value="-1+0.05j" class="slider">
+                                        <img src="../static/assets/images/-1+0.05j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef4" value="-1+1j" class="slider">
-                                    <img src="../static/assets/images/-1+1j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef4" value="-1+1j" class="slider">
+                                        <img src="../static/assets/images/-1+1j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef5" value="-1-1j" class="slider">
-                                    <img src="../static/assets/images/-1-1j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef5" value="-1-1j" class="slider">
+                                        <img src="../static/assets/images/-1-1j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef6" value="0.5-0.94j" class="slider">
-                                    <img src="../static/assets/images/0.5-0.94j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef6" value="0.5-0.94j" class="slider">
+                                        <img src="../static/assets/images/0.5-0.94j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef7" value="0.94j" class="slider">
-                                    <img src="../static/assets/images/0.94j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef7" value="0.94j" class="slider">
+                                        <img src="../static/assets/images/0.94j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef8" value="1+0.5j" class="slider">
-                                    <img src="../static/assets/images/1+0.5j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef8" value="1+0.5j" class="slider">
+                                        <img src="../static/assets/images/1+0.5j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef9" value="1-0.05j" class="slider">
-                                    <img src="../static/assets/images/1-0.05j.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef9" value="1-0.05j" class="slider">
+                                        <img src="../static/assets/images/1-0.05j.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <div class="slide__content">
-                                <button id="new-all-pass-coef10" value="1" class="slider">
-                                    <img src="../static/assets/images/1.png" alt="buttonpng" border="0" />
-                                </button>
+                        </li>
+                        <li class="splide__slide">
+                            <div class="splide__slide__container">
+                                <div class="slide__content">
+                                    <button id="new-all-pass-coef10" value="1" class="slider">
+                                        <img src="../static/assets/images/1.png" alt="buttonpng" border="0" />
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
+
     <!-- <script src="../static/assets/js/graph.js"></script> -->
     <script src="../static/assets/js/index.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
