--- a/templates/index.html
+++ b/templates/index.html
@@ -267,7 +267,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="../static/assets/js/allpass.js"></script>
+    <!-- <script src="../static/assets/js/allpass.js"></script> -->
 
 </body>
 <!-- <script src="../static/assets/js/TEST.js"></script> -->
